--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -3,11 +3,17 @@ click==8.1.3
 fastapi==0.79.0
 greenlet==1.1.2
 h11==0.13.0
-idna==3.3
 pydantic==1.9.2
 pymongo==4.2.0
-requests==2.28.1
 sniffio==1.2.0
 starlette==0.19.1
 typing_extensions==4.3.0
 uvicorn==0.18.2
+beautifulsoup4==4.11.1
+bs4==0.0.1
+certifi==2022.6.15
+charset-normalizer==2.1.1
+idna==3.3
+requests==2.28.1
+soupsieve==2.3.2.post1
+urllib3==1.26.12
