--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 version: "3"
 services:
   api:
-    container_name: server
+    container_name: app
     build:
-      context: ./server
+      context: ./app
       dockerfile: Dockerfile
     command: uvicorn main:app --host 0.0.0.0 --port 80 --reload
     environment:
       - DATABASE_URL=mongodb://admin:password123@db:27017
     volumes:
-      - ./server:/app
+      - ./app:/app
     ports:
       - 80:80
     depends_on:
